<resources>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDWsGze3BekyDXe4-FHl-4vQ8yziD5Ej-8</string>
    <string name="app_name">Strangers</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="search_button">Szukaj</string>
    <string name="search_edit_text">Wyszukaj Event</string>
    <string name="nearest_events">Wyświetl Eventy w pobliżu</string>

    <string name="drawer_main_page">Główna</string>
    <string name="drawer_profile">Profil</string>
    <string name="drawer_my_events">Moje Eventy</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="event_name_of_event">Nazwa Eventu</string>

    <string name="username_label">Imię</string>
    <string name="surname_label">Nazwisko</string>
    <string name="age_label">Wiek</string>
    <string name="gender_label">Płeć</string>

    <string name="username">Nick</string>
    <string name="surname">Maciejak</string>
    <string name="age">22</string>
    <string name="gender">Mężczyzna</string>

    <string name="event_when_label">Kiedy?:</string>
    <string name="event_where_label">Gdzie?:</string>

    <string name="event_button_join">Dołącz!</string>

    <string name="event_already_joined">Biorą udział</string>


    <string name="profile_picture_description">Zdjęcie profilowe</string>

    <string name="my_profile_my_events">Eventy</string>
    <string name="my_profile_my_location">Lokalizacja</string>
    <string name="my_profile_my_friends">Przyjaciele</string>
    <string name="my_profile_event_desc_label">opis wydarzenia</string>

    <string name="my_events_title">Title</string>
    <string name="my_events_description">When, Where</string>
    <string name="my_events_delete_button">Usuń</string>
    <string name="my_events_renew_button">Wznów</string>

    <string name="login_button">Zaloguj</string>
    <string name="sign_in_button">Zarejestruj</string>
    <string name="login_edit_text">Login/Nick</string>
    <string name="password_edit_text">Hasło</string>
    <string name="password2_edit_text">Powtórz Hasło</string>
    <string name="login_invalid_data">Niepoprawne dane logowania</string>
    <string name="unknown_error">Nieznany błąd</string>
    <string name="auth_token">X-Auth-Token</string>

    <string name="login_failed">Nieudana próba logowania</string>
    <string name="not_valid_login">Podaj poprawny login</string>
    <string name="not_valid_password">Hasło musi zawierać co najmniej 4 znaki</string>
    <string name="different_password2">Powtórzone hasło jest błędne</string>


    <string name="add_event_marker_title_toolbar">Dodaj Event na mapie</string>

    <string name="add_event_title_toolbar">Dodaj szczegóły Eventu</string>
    <string name="add_event_title_edit_text">Podaj tytuł eventu</string>
    <string name="add_event_where_edit_text">Podaj miejsce eventu</string>
    <string name="add_event_describe_edit_text">Podaj opis eventu</string>
    <string name="done">Gotowe</string>

    <string name="add_event_marker_title_marker">Dodej Event Tutaj</string>

    <string name="map_fragment_here_button">Dodaj Event tu i teraz</string>
    <string name="map_fragment_somewhere_button">Wybierz gdzie chcesz dodać Event</string>
    <string name="edit_profile_title_toolbar">Edycja Profilu</string>
    <string name="edit_profile_change_picture_button">Zmień zdjęcie profilowe</string>
    <string name="edit_profile_birthday_text_view">Data urodzenia</string>
    <string name="edit_profile_birthday_not_select_tv">Nie ustawiono</string>

    <string name="edit_profile_label">Edytuj profil</string>


    <string name="show_event_empty_recycler_view">Brak uczestników</string>
    <string name="show_event_chat_title">Chat</string>
    <string name="show_event_switch_to_chat_btn">Przejdź do czatu</string>


    <string name="chat_event_chat_hint_text">Napisz coś</string>
    <string name="chat_event_chat_button">Wyślij</string>
    <string name="chat_event_toolbar_title">Chat</string>
    <string name="chat_event_empty_list_view">Brak wiadomości</string>

    <string name="user_profile_toolbar_title">Profil</string>
    <string name="user_events_toolbar_title">Eventy użytkownika</string>

    <string name="edit">Edytuj</string>
    <string name="save">Zapisz</string>
    <string name="male">Mężczyzna</string>
    <string name="female">Kobieta</string>
    <string name="notify_new_messages">Nowe wiadomości</string>
    <string name="messages">wiadomości</string>
    <string name="message">wiadomość</string>
    <string name="show_event_action_button_end_event">Zakończ</string>
    <string name="show_event_action_button_join_event">Dołącz</string>
    <string name="show_event_action_button_quit_event">Zrezygnuj</string>
    <string name="show_event_joined_to_event">Dołączono do wydarzenia</string>
    <string name="show_event_canceled_event">Nie bierzesz już udziału</string>
    <string name="type_birthday">Podaj date urodzenia</string>
    <string name="valid_birthday">Podaj poprawną dare urodzenia</string>
    <string name="valid_sex">Wybierz płeć</string>
    <string name="drawer_logout">Wyloguj</string>
    <string name="drawer_attend_events">Biorę udział</string>
    <string name="notification_title_new_msgs">Nowe wiadomości!</string>
    <string name="my_events_unreaded_msgs_label">Nowe wiadomości:</string>
    <string name="add_event_marker_toast">Przytrzymaj dłużej by dodać event</string>
    <string name="notifications_somebody_joined_to_your_event">Dołączono do Twojego wydarzenia:</string>
    <string name="notifications_new_attenders">Nowe osoby!</string>
    <string name="notifications_to_your_event_joined_users">Do Twoich wydarzeń dołączyli:</string>

</resources>
