<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/drawer_main_page" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/drawer_profile" />
        <item
            android:id="@+id/nav_my_events"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/drawer_my_events" />
        <item
            android:id="@+id/nav_my_attend_events"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="eventy na ktore? XD" />
    </group>

</menu>
