<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="3dp">


            <TextView
                android:id="@+id/show_event_name_of_event_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="nazwa"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/show_event_when_where_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="kiedy i gdzie"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:map="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/show_event_map_view"
                        class="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:layout_weight="4"
                        map:liteMode="true"
                        map:mapType="normal" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/event_button_join"
                        android:theme="@style/AppTheme.ButtonSignIn"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/show_event_user_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/show_event_profile_picture"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:contentDescription="@string/profile_picture_description"
                        android:src="@drawable/temp_logo_picture"
                        android:clickable="true"
                        android:onClick="onClickProfilePhoto"/>

                    <TextView
                        android:id="@+id/show_event_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/username" />

                    <TextView
                        android:id="@+id/show_event_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:text="@string/gender" />

                    <TextView
                        android:id="@+id/show_event_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:text="" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/show_event_details_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/my_profile_event_desc_label" />

            <LinearLayout
                android:id="@+id/show_event_already_joined_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/event_already_joined"
                    android:textSize="25sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/show_event_attenders_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none" />

                <TextView
                    android:id="@+id/show_event_empty_tv_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/show_event_empty_recycler_view"
                    android:textSize="15sp"
                    android:visibility="gone" />

            </LinearLayout>

            <TextView
                android:id="@+id/show_event_chat_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/show_event_chat_title"
                android:textSize="25sp"
                android:clickable="true"
                android:onClick="onClickChat"/>

            <Button
                android:id="@+id/show_event_switch_to_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_event_switch_to_chat_btn"
                android:theme="@style/AppTheme.ButtonLogin"
                android:onClick="onClickChat"
                />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>