<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MyProfileFragment"
    android:orientation="vertical"
    android:layout_gravity="top"
    android:gravity="top">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="top"
            android:gravity="center"
>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/colorPrimaryLight">

                <ImageView
                    android:id="@+id/my_profile_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/profile_picture"
                    android:layout_margin="8dp"/>

                <TextView
                    android:id="@+id/my_profile_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="35sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/my_profile_age_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/my_profile_age_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age_label"
                        android:gravity="start"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/my_profile_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:textSize="30sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gender_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/my_profile_gender_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_label"
                        android:gravity="start"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/my_profile_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textSize="30sp"/>
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="bottom">

                <Button
                    android:id="@+id/my_profile_edit_profile_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/AppTheme.ButtonSignIn"
                    android:text="@string/edit_profile_label"
                    android:layout_marginTop="24dp"
                    android:drawableStart="@drawable/ic_edit_white_24dp" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>