<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_events_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="#20000000"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/my_events_title"
                android:textColor="#000"
                android:textSize="22sp"
                android:elevation="2dp"/>

            <TextView
                android:id="@+id/my_events_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:paddingTop="4dp"
                android:text="@string/my_events_description"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/my_events_renew_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_autorenew_black_24dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/my_events_renew_button"
                    android:textColor="#000"
                    android:background="#90CAF9"
                    style="?android:buttonBarButtonStyle"/>

                <Button
                    android:id="@+id/my_events_delete_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_delete_black_24dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/my_events_delete_button"
                    android:textColor="#000"
                    android:background="#F44336"
                    style="?android:buttonBarButtonStyle"
                    />
            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>